log
Thu 14 Mar 2024 08:46:23 PM UTC: 
 exercises.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
Thu 14 Mar 2024 08:47:55 PM UTC: 
 exercises.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:38:11: error: expected ‘;’ before ‘}’ token
   38 |     size--
      |           ^
      |           ;
   39 |   }
      |   ~        
Compilation failed
5853533
Thu 14 Mar 2024 08:48:08 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
32fa24b
Thu 14 Mar 2024 08:54:27 PM UTC: 
 exercises.c | 16 ++++++++++++++--
 1 file changed, 14 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:70:54: error: invalid operands to binary * (have ‘long unsigned int’ and ‘int *’)
   70 |     arregloNuevo = realloc(arregloNuevo, sizeof(int) * (newSize + 1));
      |                                                      ^ ~~~~~~~~~~~~~
      |                                                                 |
      |                                                                 int *
Compilation failed
507ba2b
Thu 14 Mar 2024 08:54:39 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:70:20: error: ‘arregloNuevo’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   70 |     arregloNuevo = realloc(arregloNuevo, sizeof(int) * ((*newSize) + 1));
      |                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
7254a7c
Thu 14 Mar 2024 08:55:30 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:72:22: error: ‘arregloNuevo’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   72 |       arregloNuevo = realloc(arregloNuevo, sizeof(int) * ((*newSize) + 1));
      |                      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
cfcf4e3
Thu 14 Mar 2024 08:55:50 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:72:21: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   72 |       *arregloNuevo = realloc(arregloNuevo, sizeof(int) * ((*newSize) + 1));
      |                     ^
exercises.c:72:23: error: ‘arregloNuevo’ may be used uninitialized [-Werror=maybe-uninitialized]
   72 |       *arregloNuevo = realloc(arregloNuevo, sizeof(int) * ((*newSize) + 1));
      |                       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
2ad676d
Thu 14 Mar 2024 08:58:37 PM UTC: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:78:10: error: ‘arregloNuevo’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   78 |   return arregloNuevo;
      |          ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
398f0c2
Thu 14 Mar 2024 08:58:47 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:78:10: error: returning ‘int’ from a function with return type ‘int *’ makes pointer from integer without a cast [-Werror=int-conversion]
   78 |   return *arregloNuevo;
      |          ^~~~~~~~~~~~~
exercises.c:78:10: error: ‘arregloNuevo’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   78 |   return *arregloNuevo;
      |          ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
75965e6
Thu 14 Mar 2024 09:00:11 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:78:10: error: ‘arregloNuevo’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   78 |   return arregloNuevo;
      |          ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
895da41
Thu 14 Mar 2024 09:03:29 PM UTC: 
 exercises.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
 tests:  0|0
f9df073
Thu 14 Mar 2024 09:04:40 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
ee75a42
Thu 14 Mar 2024 09:05:22 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
6f75c0e
Thu 14 Mar 2024 09:09:45 PM UTC: 
 exercises.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:85:10: error: ‘arregloNuevo’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   85 |   return arregloNuevo;
      |          ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
fdb025c
Thu 14 Mar 2024 09:10:24 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:85:10: error: ‘arregloNuevo’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   85 |   return arregloNuevo;
      |          ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
f46810d
Thu 14 Mar 2024 09:10:44 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
83e3bad
Thu 14 Mar 2024 09:12:11 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
f20070a
Thu 14 Mar 2024 09:12:29 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
903bbe8
Thu 14 Mar 2024 09:19:47 PM UTC: 
 exercises.c | 26 ++++++++++++++++++++++++--
 1 file changed, 24 insertions(+), 2 deletions(-)
Thu 14 Mar 2024 09:22:35 PM UTC: 
 exercises.c | 26 ++++++++++++++++++++++++--
 1 file changed, 24 insertions(+), 2 deletions(-)
 tests:  0|0
cbd3d5c
Thu 14 Mar 2024 09:23:03 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|4
total_score: 30/70
3d8d40c
Fri 15 Mar 2024 12:39:16 PM UTC: 
 exercises.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:83:10: error: expected ‘(’ before ‘arregloNuevo’
   83 |       if arregloNuevo = NULL;
      |          ^~~~~~~~~~~~
      |          (
Compilation failed
5ed8993
Fri 15 Mar 2024 12:39:33 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:83:11: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   83 |       if (arregloNuevo = NULL);
      |           ^~~~~~~~~~~~
exercises.c:83:7: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   83 |       if (arregloNuevo = NULL);
      |       ^~
exercises.c:84:7: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   84 |       {
      |       ^
cc1: all warnings being treated as errors
Compilation failed
01af0a9
Fri 15 Mar 2024 12:40:24 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:83:11: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   83 |       if (arregloNuevo = NULL)
      |           ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
4da8b8d
Fri 15 Mar 2024 12:42:51 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
f13a86a
Fri 15 Mar 2024 12:47:28 PM UTC: 
 exercises.c | 28 +++++++++++++++++++++++++++-
 1 file changed, 27 insertions(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
e942f52
Fri 15 Mar 2024 12:48:49 PM UTC: 
 exercises.c | 25 ++++++++++++-------------
 1 file changed, 12 insertions(+), 13 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:140:14: error: expected ‘;’ before ‘}’ token
  140 |         break
      |              ^
      |              ;
  141 |       }
      |       ~       
Compilation failed
bc897a5
Fri 15 Mar 2024 12:48:57 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Fri 15 Mar 2024 01:03:46 PM UTC: 
 exercises.c | 15 ++++-----------
 1 file changed, 4 insertions(+), 11 deletions(-)
 tests:  0|3
total_score: 40/70
cec32fc
Fri 15 Mar 2024 01:18:00 PM UTC: 
 exercises.c | 32 +++++++++++++++++++++++++++++++-
 1 file changed, 31 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:176:10: error: ‘orden’ undeclared (first use in this function)
  176 |   return orden;
      |          ^~~~~
exercises.c:176:10: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:150:7: error: unused variable ‘index’ [-Werror=unused-variable]
  150 |   int index = 0;
      |       ^~~~~
cc1: all warnings being treated as errors
Compilation failed
c43f604
Fri 15 Mar 2024 01:18:17 PM UTC: 
 exercises.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  0|2
total_score: 50/70
22ca29f
